@@ -7,7 +7,9 @@
 	<application android:icon="@drawable/sqlite_icon"
       android:label="@string/app_name"
       android:debuggable="true">
-		<activity android:name=".aSQLiteManager" android:label="@string/app_name">
+		<activity android:name=".aSQLiteManager"
+			android:screenOrientation="portrait"
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
