@@ -1,13 +1,13 @@
 ToDo / ideas for coming development
 	Compress SQL wines.name -> t1.name in resulting SQL not on lists
 	Sort data / query results by clicking on title
+	Go to first record / previous next / page / last record << < > >>
 	Better horizontal scrolling
 	"Tab" view / show active tab
-	Recent files
 	Scripts editor?  
 	
-
 Done
+	Recent database files
 	Data entry and editing form use editing button at each row
 	Execute scripts (single line or full script)
 	Select SQL history from query form
